style: Add bg-grey and bg-white classes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
-    background-size: cover;
+	background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+	background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Noto Sans', sans-serif;
@@ -56,7 +56,22 @@ body {
     border: 1px solid black !important;
 }
 
-/* -------------------------------- Media Queries */
+.bg-black {
+    background: #000 !important;
+}
+
+
+/* Banner */
+.bg-grey {
+    background: #f7f7f7;
+}
+
+.bg-white {
+    background: white;
+}
+
+
+/* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
