--- a/static/css/base.css
+++ b/static/css/base.css
@@ -70,6 +70,11 @@ body {
     background: white;
 }
 
+/* Header */
+.mobile-nav-link-pd {
+    padding: 0.5rem 0.5rem;
+}
+
 
 /* --------------------------------- Media queries */
 
