--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
             <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
-                <form method="GET" action="">
+              <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-3 mt-1 mb-1" type="text" name="search-site" placeholder="Search..." aria-label="Search...">
                         <div class="input-group-append">
@@ -133,7 +133,7 @@
 
 
     {% if messages %}
-        <div class="message-container"></div>
+      <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
