feat: Add sorting/filtering options

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,9 +5,9 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Rating</a>
-                <a href="" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
@@ -17,33 +17,33 @@
                 Rugby Boots
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="rugby-boots-link">
-                <a href="" class="dropdown-item">Adidas Kakari</a>
-                <a href="" class="dropdown-item">Adidas Malice</a>
-                <a href="" class="dropdown-item">All Rugby Boots</a>
+                <a href="{% url 'products' %}?category=adidas_kakari" class="dropdown-item">Adidas Kakari</a>
+                <a href="{% url 'products' %}?category=adidas_malice" class="dropdown-item">Adidas Malice</a>
+                <a href="{% url 'products' %}?category=adidas_kakari,adidas_malice" class="dropdown-item">All Rugby Boots</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="club-rugby-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Club Rugby
+                Jerseys
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="club-rugby-link">
-                <a href="" class="dropdown-item">Leinster</a>
-                <a href="" class="dropdown-item">Munster</a>
-                <a href="" class="dropdown-item">Ulster</a>
-                <a href="" class="dropdown-item">All Clubs</a>
+                <a href="{% url 'products' %}?category=leinster"  class="dropdown-item">Leinster</a>
+                <a href="{% url 'products' %}?category=munster" " class="dropdown-item">Munster</a>
+                <a href="{% url 'products' %}?category=ulster"  class="dropdown-item">Ulster</a>
+                <a href="{% url 'products' %}?category=leinster,munster,ulster"  class="dropdown-item">All Jerseys</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="training-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Training
+                Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="training-link">
-                <a href="" class="dropdown-item">Balls</a>
-                <a href="" class="dropdown-item">Gum Shields</a>
-                <a href="" class="dropdown-item">Protection</a>
-                <a href="" class="dropdown-item">All Training</a>
+                <a href="{% url 'products' %}?category=balls"  class="dropdown-item">Balls</a>
+                <a href="{% url 'products' %}?category=gum_shields"  class="dropdown-item">Gum Shields</a>
+                <a href="{% url 'products' %}?category=protection"  class="dropdown-item">Protection</a>
+                <a href="{% url 'products' %}?category=balls,gum_shields,protection"  class="dropdown-item">All Accessories</a>
             </div>
         </li>
     </ul>
