feat: Add bag url

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,8 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                      <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+
                             <div class="text-center">
                                 <div><span class="material-icons">shopping_cart</span></div>
                                 <p class="my-0">
