--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,12 +1,8 @@
-<ul>
-  <li class="list-inline-item">
-    <a class="text-black nav-link d-block d-lg-none mobile-nav-link-pd" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  
+<li class="list-inline-item">
+    <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
-            <div>                      <i class="material-icons">
-                search
-            </i>  
-
-        </div>
+            <div><i class="fas fa-search fa-lg"></i></div>
             <p class="my-0">Search</p>
         </div>
     </a>
@@ -17,25 +13,18 @@
                 <div class="input-group-append">
                     <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
                         <span class="icon">
-                            <span class="material-icons">
-                                account_circle
-                                </span>
-                        </span> 
+                            <i class="fas fa-search"></i>
+                        </span>
                     </button>
-
-
-
                 </div>
             </div>
         </form>
     </div>
 </li>
 <li class="list-inline-item dropdown">
-    <a class="text-black nav-link d-block d-lg-none mobile-nav-link-pd" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
-            <div>                       <span class="material-icons">
-                account_circle
-                </span> </div>
+            <div><i class="fas fa-user fa-lg"></i></div>
             <p class="my-0">My Account</p>
         </div>
     </a>
@@ -53,11 +42,9 @@
     </div>
 </li>
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none mobile-nav-link-pd" href="">
+    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
         <div class="text-center">
-            <div>                         <span class="material-icons">
-                shopping_cart
-                </span></div>
+            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
             <p class="my-0">
                 {% if grand_total %}
                     ${{ grand_total|floatformat:2 }}
@@ -67,5 +54,4 @@
             </p>
         </div>
     </a>
-  </li>
-</ul>
+</li>
