--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,6 +146,11 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
@@ -215,37 +220,91 @@ a.category-badge > span.badge:hover {
     overflow-y: auto;
 }
 
-/* --------------------------------- Media queries */
+/* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-  .container {
-    max-width: 80%;
+    .container {
+      max-width: 80%;
+    }
   }
-}
-
-/* fixed top navbar only on medium and up */
-@media (min-width: 992px) {
-    .fixed-top-desktop-only {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 1030;
-    }
-
-    .header-container {
-        padding-top: 164px;
-    }
-}
-
-/* pad the top a bit when navbar is collapsed on mobile */
-@media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
-
-    body {
-        height: calc(100vh - 116px);
-    }
-}
+  
+  /* Allauth form formatting */
+  
+  .allauth-form-inner-content p {
+      margin-top: 1.5rem; /* mt-4 */
+      color: #6c757d; /* text-secondary */
+  }
+  
+  .allauth-form-inner-content input {
+      border-color: #000;
+      border-radius: 0;
+  }
+  
+  .allauth-form-inner-content label:not([for='id_remember']) {
+      display: none;
+  }
+  
+  .allauth-form-inner-content input::placeholder {
+      color: #aab7c4;
+  }
+  
+  .allauth-form-inner-content button,
+  .allauth-form-inner-content input[type='submit'] {
+      /* btn */
+      display: inline-block;
+      font-weight: 400;
+      color: #fff;
+      text-align: center;
+      vertical-align: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      background-color: #000;
+      border: 1px solid #000;
+      padding: .375rem .75rem;
+      font-size: 1rem;
+      line-height: 1.5;
+      border-radius: 0;
+  
+      /* standard bootstrap btn transitions */
+      transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  }
+  
+  .allauth-form-inner-content button:hover,
+  .allauth-form-inner-content input[type='submit']:hover {	
+      color: #fff;
+      background-color: #222;
+      border-color: #222;
+  }
+  
+  .allauth-form-inner-content a {
+      color: #17a2b8; /* text-info */
+  }
+  
+  /* fixed top navbar only on medium and up */
+  @media (min-width: 992px) {
+      .fixed-top-desktop-only {
+          position: fixed;
+          top: 0;
+          right: 0;
+          left: 0;
+          z-index: 1030;
+      }
+  
+      .header-container {
+          padding-top: 164px;
+      }
+  }
+  
+  /* pad the top a bit when navbar is collapsed on mobile */
+  @media (max-width: 991px) {
+      .header-container {
+          padding-top: 116px;
+      }
+  
+      body {
+          height: calc(100vh - 116px);
+      }
+  }
