--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-
 {% block content %}
+<div class="hero-image">
     <div class="container header-container">
         <div class="overlay"></div>
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
@@ -12,4 +12,5 @@
             </div>
         </div>
     </div>
+</div>    
 {% endblock %}
