--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,9 +5,9 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
-<hr>
+<div class="section-holder">
+  <div class="form-holder">
+<h2 class="logo-font mb-4 text-center">{% trans "Sign Out" %}</h2>
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
@@ -15,9 +15,13 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <!-- Cancel and Sign out buttons -->
+  <div class="float-right">
+    <a class="btn black-btn" href="{% url 'home' %}">Cancel</a>
+    <button class="btn green-btn" type="submit">{% trans 'Sign Out' %}</button>
+  </div>  
 </form>
-
+</div>
+</div>
 
 {% endblock %}
