--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,24 +1,28 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
-
 {% block head_title %}{% trans "Signup" %}{% endblock %}
-
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
-<hr>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
-</form>
-
+<!-- Sign Up/Register form-->
+<div class="section-holder">
+  <div class="form-holder">
+  <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    {% csrf_token %}
+    <h2 class="logo-font mb-4 text-center">{% trans "Register" %}</h2>
+    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    <div class="form-row">
+      <div class="col-12">
+      {{form|crispy}}
+      </div>
+    </div>
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <!-- Login and Sign Up/Register buttons-->
+    <div class="float-right">
+      <a class="btn black-btn" href="{% url 'account_login' %}">Back to Login</a>
+      <button class="btn green-btn" type="submit">{% trans "Sign Up" %}</button>
+    </div>
+  </form>
+</div>  
+</div>
 {% endblock %}
