feat: Add links to manage news items

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -51,5 +51,10 @@
                 <a href="{% url 'products' %}?category=balls,gum_shields,protection"  class="dropdown-item">All Accessories</a>
             </div>
         </li>
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'news_items' %}" id="training-link" aria-haspopup="true" aria-expanded="false">
+                NEWS
+            </a>
+        </li>
     </ul>
 </div>
