--- a/news/templates/news/add_news_item.html
+++ b/news/templates/news/add_news_item.html
@@ -38,7 +38,7 @@
                                 <div class="text-center mt-2">
                                     <p class="mt-0">*Select 'Draft' to save the news item for later or select 'Publish' to publish on the
                                         site.</p>
-                                    <P>Draft posts will be saved in your<a class="text-info" href="{% url 'profile' %}"> Profile</a></P>
+                                    <P>Draft news items will be saved in your<a class="text-info" href="{% url 'profile' %}"> Profile</a></P>
                                     <button class="btn btn-sm btn-blue rounded-1 text-uppercase" type="submit">Add News Item</button>
                                     <a class="btn btn-sm btn-blue rounded-1 text-uppercase" href="{% url 'news_items' %}">Cancel</a>
                                 </div>
