--- a/news/templates/news/manage_news_items.html
+++ b/news/templates/news/manage_news_items.html
@@ -52,7 +52,7 @@
                                         {% endif %}
                                     <td>
                                         <a href="{% url 'edit_news_item' news_item.id %}">Edit</a> |
-                                        <a class="text-danger" href="{% url 'edit_news_item' news_item.id %}">Delete</a>
+                                        <a href="{% url 'delete_news_item' news_item.id  %}" class="btn-sm btn-danger">Delete</a>
                                     </td>
                                 </tr>
                                 {% endfor %}
